Adjusted the content height based on correct progress bar height (still dodgy though). Prevents unnecessary scrollbar in form flow.

--- a/src/CSS/Core.css
+++ b/src/CSS/Core.css
@@ -1,6 +1,7 @@
 :root {
   --main-navigation-bar-height: 55px;
   --portato-blue: #1875bc;
+  --progress-bar-margin: 15px;
 }
 
 html,
