--- a/src/CSS/FillOutForms.css
+++ b/src/CSS/FillOutForms.css
@@ -4,8 +4,8 @@
 }
 
 .progress-bar-indicator {
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: var(--progress-bar-margin);
+    margin-bottom: var(--progress-bar-margin);
     left: 10%;
     width: 80%;
 }
@@ -25,7 +25,8 @@
     /* background-color: chocolate; */
     display: flex;
     flex-direction: column;
-    min-height: calc(100vh - var(--main-navigation-bar-height));
+    /* min-height calculated by total height, minus nav and progress bar */
+    min-height: calc(100vh - var(--main-navigation-bar-height) - 22px - 2 * var(--progress-bar-margin));
 }
 
 .form-button-container {
